A patch from Bruno Busco " Improved style for main navigation bar"  '(https://issues.apache.org/jira/browse/OFBIZ-911) - OFBIZ-911 Put rounded tabs back but on IE6 (anyway we don't care about IE6 anymore)
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@734729 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -934,11 +934,20 @@ display: inline; /* IE Fix */
 
 #main-navigation ul li {
 float: left;
+background-image: url(/images/tabs/main_uns_left.gif);
+}
+
+#main-navigation ul li:hover {
+background-image: url(/images/tabs/main_sel_left.gif);
+}
+
+#main-navigation ul li.selected {
+background-image: url(/images/tabs/main_sel_left.gif);
 }
 
 #main-navigation ul a {
-background-image: url(/images/tabs/main_uns_left.gif);
-background-position: top left;
+background-image: url(/images/tabs/main_uns_right.gif);
+background-position: top right;
 background-repeat: no-repeat;
 border-bottom: solid #989898 0.01em;
 color: #000000;
@@ -955,8 +964,8 @@ color: #D4D0C8;
 #main-navigation ul a:hover,
 #main-navigation ul .selected a,
 #main-navigation ui .selected a:hover {
-background-image: url(/images/tabs/main_sel_left.gif);
-background-position: top left;
+background-image: url(/images/tabs/main_sel_right.gif);
+background-position: top right;
 background-repeat: no-repeat;
 border-bottom: solid #D4D0C8 0.01em;
 color: #000099;
